[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/scripts/Dialog.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.223529, 0.243137, 0.27451, 0.682353 )
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.156863, 0.192157, 1 )
corner_radius_top_left = 35
corner_radius_top_right = 35

[sub_resource type="DynamicFont" id=3]
size = 38
outline_color = Color( 0.933333, 0.933333, 0.933333, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0.933333, 0.933333, 0.933333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.133333, 0.156863, 0.192157, 1 )
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.784314, 0.137255, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.741176, 0.129412, 0.188235, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.741176, 0.129412, 0.188235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.698039, 0.121569, 0.176471, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.784314, 0.137255, 0.2, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.741176, 0.129412, 0.188235, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 3
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.862745, 0.207843, 0.270588, 1 )
border_color = Color( 0.156863, 0.654902, 0.270588, 1 )
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=10]
size = 26
outline_color = Color( 0.933333, 0.933333, 0.933333, 1 )
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 319.75
margin_top = 120.816
margin_right = -277.25
margin_bottom = -114.184
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 1.52588e-05
margin_top = 7.62939e-06
margin_right = 1025.0
margin_bottom = 598.0
rect_scale = Vector2( 0.416515, 0.609137 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Caption" type="Panel" parent="Panel"]
margin_left = 1.0
margin_right = 1025.0
margin_bottom = 94.0
mouse_filter = 1
mouse_default_cursor_shape = 13
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Caption"]
margin_top = -1.0
margin_right = 1023.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )
text = "Header"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 17.0
margin_top = 97.0
margin_right = 1003.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 4 )
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. "
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="Panel" parent="Panel"]
margin_left = 1.0
margin_top = 519.0
margin_right = 1024.0
margin_bottom = 599.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/Footer"]
margin_left = 52.8775
margin_top = 8.0
margin_right = 387.878
margin_bottom = 70.0
rect_pivot_offset = Vector2( 179.401, 31 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Button1"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel/Footer"]
margin_left = 426.878
margin_top = 6.87756
margin_right = 761.878
margin_bottom = 68.8776
rect_pivot_offset = Vector2( 179.401, 31 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Button2"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Panel/Caption" to="." method="_on_Caption_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Caption" to="." method="_on_Caption_mouse_exited"]
[connection signal="pressed" from="Panel/Footer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Footer/Button2" to="." method="_on_Button2_pressed"]
